Fix wrapping links

--- a/style.css
+++ b/style.css
@@ -8,9 +8,7 @@ html, body {
   flex-direction: column;
   min-height: 100vh;
 }
-.content {
-   flex: 1;
-}
 a {
   text-decoration: none;
 }
+
